packages/typ/tests/fixtures/diagnostics/0192_adt_nested_annotation_mismatch_06.ml.infer.expected
File "0192_adt_nested_annotation_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0192_adt_nested_annotation_mismatch_06 is not a valid module name.

File "0192_adt_nested_annotation_mismatch_06.ml", line 2, characters 28-32:
2 | let _ : rec_zeta = { age = (true, 5); ready = false }
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
